--- a/config/user_config.ini
+++ b/config/user_config.ini
@@ -25,7 +25,7 @@ open_m3u_result = True
 url_keywords_blacklist = 
 open_subscribe = True
 subscribe_urls = http://175.178.251.183:6689/live.txt,http://102.134.54.106:3099/live/全国酒店源mini.txt,https://ghproxy.net/https://raw.githubusercontent.com/kimwang1978/collect-tv-txt/main/merged_output.txt,https://m3u.ibert.me/txt/fmml_dv6.txt,https://m3u.ibert.me/txt/o_cn.txt,https://m3u.ibert.me/txt/j_iptv.txt,https://github.moeyy.xyz/https://raw.githubusercontent.com/PizazzGY/TVBox/main/live.txt
-open_multicast = False
+open_multicast = True
 open_multicast_tonkiang = True
 open_multicast_fofa = True
 multicast_region_list = 浙江
